# unchained-browser

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: info-discovery-plan.md  publishing.md  roadmap.md  webvoyager-baseline-2026-05-16.jsonl  webvoyager-baseline-v1-2026-05-16.jsonl  webvoyager-data-format.md  webvoyager-site-coverage-run-v1-2026-05-17.jsonl  webvoyager-site-coverage-run-v2-2026-05-17.jsonl  webvoyager-site-coverage-run-v3-2026-05-17.jsonl  webvoyager-site-coverage-run-v4-2026-05-17.jsonl  webvoyager-site-coverage-run-v5-2026-05-17.jsonl  webvoyager-site-coverage-v1.jsonl  webvoyager-usability-plan.md
python/: pyproject.toml
python/unbrowser/: __init__.py  _cli.py
scripts/: blockmap_forms_smoke.py  discovery_routing_smoke.py  discovery_smoke.py  generalization_smoke.py  network_extract_activate_smoke.py  page_model_smoke.py  route_discover_smoke.py  router.py  text_cards_smoke.py  watch.py
skills/unbrowser/: SKILL.md
src/: challenge.rs  main.rs  network_store.rs  profile.rs
src/js/: blockmap.js  dom.js  extract.js  interact.js  page_model.js  shims.js
train/: README.md  eval_subagent_tasks.py  eval_tool_likelihoods.py  test_collect.py  test_webvoyager_eval.py  webvoyager_eval.py
train/corpus/: subagent_tasks.json  tool_likelihoods_ab.json
