[package]
name = "unbrowser"
version = "0.0.11"
edition = "2024"
description = "Web access for LLM agents. One static binary. No Chrome."
license = "Apache-2.0"
repository = "https://github.com/protostatis/unbrowser"

[dependencies]
anyhow = "1"
base64 = "0.22"
cookie = "0.18"
cookie_store = "0.21"
html5ever = "=0.38.0"
http = "1"
markup5ever_rcdom = "=0.38.0"
rand = "0.8"
rquickjs = { version = "0.11" }
wreq = { version = "6.0.0-rc.28", features = ["cookies", "gzip", "brotli", "deflate", "zstd", "charset", "system-proxy"] }
wreq-util = { version = "3.0.0-rc.11", features = ["emulation-serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt", "macros", "io-std", "io-util"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
url = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
