[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
# Distribution name `pyunbrowser` (not `unbrowser`) because PyPI's name
# moderation blocked `unbrowser` on typosquat-prevention grounds (it's too
# close to `browser`). The `py-` prefix is the established PyPI workaround
# (cf. python-dateutil → `from dateutil import ...`); the import name and
# binary stay `unbrowser` everywhere else.
name = "pyunbrowser"
version = "0.0.9"
description = "Web access for LLM agents. One static binary. No Chrome."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "protostatis" }]
keywords = ["browser", "scraping", "llm", "agent", "headless", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/protostatis/unbrowser"
Repository = "https://github.com/protostatis/unbrowser"
Issues = "https://github.com/protostatis/unbrowser/issues"

# `pip install pyunbrowser` installs an `unbrowser` script on $PATH that
# execs the bundled native binary. Lets MCP hosts use `command: "unbrowser"`
# without knowing the wheel's site-packages path.
[project.scripts]
unbrowser = "unbrowser._cli:main"

# The wheel ships the platform-specific native binary inside unbrowser/_bin/.
# CI builds the binary first (cargo build --release for each target), copies
# it into unbrowser/_bin/, then runs `python -m build --wheel` to produce a
# platform-tagged wheel. The sdist intentionally excludes _bin/ — a source
# distribution should be platform-neutral.
[tool.hatch.build.targets.wheel]
packages = ["unbrowser"]
# pure-python = false flips the wheel from py3-none-any to a platform-tagged
# wheel based on the host (macosx_*, linux_*, etc.). CI cross-compiles by
# post-processing the wheel name via `wheel tags --platform <target>`.
pure-python = false
# Even though _bin/* is gitignored (binary is a build artifact, never in git),
# hatchling's package auto-discovery picks up the binary if it's physically
# present at build time — exactly what we want. CI drops the per-platform
# binary into _bin/ before running `python -m build --wheel`. Sdist build
# explicitly excludes _bin/ (see [tool.hatch.build.targets.sdist] below)
# because a source distribution must be platform-neutral.
# Suppress hatchling's "did you mean to mark this as platform-specific?"
# nag — yes, we did, deliberately, for the bundled binary.
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = ["unbrowser/", "README.md", "LICENSE"]
exclude = ["unbrowser/_bin/"]
